--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "random-words": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1"
   },
