--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "classnames": "^2.5.1",
     "framer-motion": "^12.0.6",
     "random-words": "^2.0.1",
     "react": "^18.3.1",
